Configure Ansible for fact caching and disable retry files

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,9 +2,13 @@
 inventory = ./etc/inventory.ini
 roles_path = galaxy-roles
 vault_password_file = ~/.vault_pass.txt
+fact_caching = jsonfile
+fact_caching_connection = ~/.ansible_facts
+fact_caching_timeout = 86400
+retry_files_enabled = False
+retry_files_save_path = ~/.ansible-retry
 
 interpreter_python=$VIRTUAL_ENV/bin/python
-
 
 
 [ssh_connection]
