--- a/roles/water-gkhs-filebot/tasks/main.yml
+++ b/roles/water-gkhs-filebot/tasks/main.yml
@@ -77,6 +77,7 @@
     owner: "{{ media_user }}"
   tags:
     - media
+    - clear_bullshit
 
 - name: Add sortitaaht cron job
   ansible.builtin.cron:
