Add configuration files for linters and update workflows for improved linting processes

--- a/.github/super-linter.local.env
+++ b/.github/super-linter.local.env
@@ -1,6 +1,7 @@
 # ANSIBLE_CONFIG_FILE 	.ansible-lint.yml 	Filename for Ansible-lint configuration (ex: .ansible-lint, .ansible-lint.yml)
 # ANSIBLE_DIRECTORY 	/ansible 	Flag to set the root directory for Ansible file location(s), relative to DEFAULT_WORKSPACE. Set to . to use the top-level of the DEFAULT_WORKSPACE.
 # BASH_EXEC_IGNORE_LIBRARIES 	false 	If set to true, shell files with a file extension and no shebang line are ignored when checking if the executable bit is set.
+BASH_EXEC_IGNORE_LIBRARIES=true
 # BASH_FILE_NAME 	.shellcheckrc 	Filename for Shellcheck
 # BASH_SEVERITY 	Shellcheck default severity 	Specify the minimum severity of errors to consider in shellcheck. Valid values in order of severity are error, warning, info and style.
 # CHECKOV_FILE_NAME 	.checkov.yaml 	Configuration filename for Checkov.
@@ -164,7 +165,9 @@ FIX_YAML_PRETTIER=true
 # RUN_LOCAL 	false 	Set this to true when running outside GitHub Actions or when you want to disable getting environment information from the GitHub Actions environment. For more information about running Super-linter outside GitHub Actions, see Run Super-Linter outside GitHub Actions.
 # RUST_CLIPPY_COMMAND_OPTIONS 	not set 	Additional options and arguments to pass to the command when running Clippy.
 # SAVE_SUPER_LINTER_OUTPUT 	false 	If set to true, Super-linter will save its output in the workspace. For more information, see Super-linter outputs.
+SAVE_SUPER_LINTER_OUTPUT=true
 # SAVE_SUPER_LINTER_SUMMARY 	false 	If set to true, Super-linter will save a summary. For more information, see Summary outputs.
+SAVE_SUPER_LINTER_SUMMARY=true
 # SCALAFMT_CONFIG_FILE 	.scalafmt.conf 	Filename for scalafmt configuration (ex: .scalafmt.conf)
 # SNAKEMAKE_SNAKEFMT_CONFIG_FILE 	.snakefmt.toml 	Filename for Snakemake configuration (ex: pyproject.toml, .snakefmt.toml)
 # SSL_CERT_SECRET 	none 	SSL cert to add to the Super-Linter trust store. This is needed for users on self-hosted runners or need to inject the cert for security standards (ex. ${{ secrets.SSL_CERT }})
@@ -220,6 +223,7 @@ FIX_YAML_PRETTIER=true
 # VALIDATE_JAVASCRIPT_PRETTIER 	true 	Flag to enable or disable checking the formatting of JavaScript files with Prettier.
 # VALIDATE_JAVASCRIPT_STANDARD 	true 	Flag to enable or disable the linting process of the JavaScript language. (Utilizing: standard)
 # VALIDATE_JSCPD 	true 	Flag to enable or disable JSCPD.
+VALIDATE_JSCPD=false
 # VALIDATE_JSON 	true 	Flag to enable or disable the linting process of the JSON language.
 # VALIDATE_JSON_PRETTIER 	true 	Flag to enable or disable checking the formatting of JSON files with Prettier.
 # VALIDATE_JSONC 	true 	Flag to enable or disable the linting process of the JSONC and JSON5 languages.
