Add rescue blocks to handle failures in AWS tasks with debug messages

--- a/roles/firth-dns/tasks/zones/aquarionics.yml
+++ b/roles/firth-dns/tasks/zones/aquarionics.yml
@@ -389,3 +389,9 @@
         type: TXT
         ttl: "300"
         value: '"did=did:plc:acfoshntvxza6ac45bkttyiw"'
+
+  rescue:
+    - debug:
+        msg: "AWS tasks failed"
+    - command:
+        cmd: "false"
