--- a/roles/firth-dns/tasks/zones/istic.yml
+++ b/roles/firth-dns/tasks/zones/istic.yml
@@ -582,3 +582,9 @@
       tags:
         - istic_net
         - istic_sys
+
+  rescue:
+    - debug:
+        msg: "AWS tasks failed"
+    - command:
+        cmd: "false"
