Refactor scripts to improve quoting consistency and add rescue blocks for error handling in AWS tasks

--- a/roles/stream-delta/tasks/main.yml
+++ b/roles/stream-delta/tasks/main.yml
@@ -30,6 +30,11 @@
         loop_var: known_host
       become: true
       become_user: stream-delta
+  rescue:
+    - debug:
+        msg: "AWS tasks failed"
+    - command:
+        cmd: "false"
 
 - name: Install stream-delta dependencies
   ansible.builtin.package:
