--- a/roles/water-gkhs-web-errors/tasks/main.yml
+++ b/roles/water-gkhs-web-errors/tasks/main.yml
@@ -56,3 +56,9 @@
       when: apache_installed.stat.exists
       notify:
         - restart apache
+
+  rescue:
+    - debug:
+        msg: "WWW tasks failed"
+    - command:
+        cmd: "false"
