Enhance error handling in AWS tasks by adding failure warnings and execution commands across multiple YAML files

--- a/roles/firth-dns/tasks/zones/aquarionics.yml
+++ b/roles/firth-dns/tasks/zones/aquarionics.yml
@@ -391,7 +391,9 @@
         value: '"did=did:plc:acfoshntvxza6ac45bkttyiw"'
 
   rescue:
-    - debug:
+    - name: "Failure warning"
+      ansible.builtin.debug:
         msg: "AWS tasks failed"
-    - command:
+    - name: "Failure execution"
+      ansible.builtin.command:
         cmd: "false"
