--- a/roles/stream-delta/tasks/main.yml
+++ b/roles/stream-delta/tasks/main.yml
@@ -31,9 +31,11 @@
       become: true
       become_user: stream-delta
   rescue:
-    - debug:
+    - name: "Failure warning"
+      ansible.builtin.debug:
         msg: "AWS tasks failed"
-    - command:
+    - name: "Failure execution"
+      ansible.builtin.command:
         cmd: "false"
 
 - name: Install stream-delta dependencies
