--- a/roles/water-gkhs-web-errors/tasks/main.yml
+++ b/roles/water-gkhs-web-errors/tasks/main.yml
@@ -58,7 +58,9 @@
         - restart apache
 
   rescue:
-    - debug:
+    - name: "Failure warning"
+      ansible.builtin.debug:
         msg: "WWW tasks failed"
-    - command:
+    - name: "Failure execution"
+      ansible.builtin.command:
         cmd: "false"
