--- a/roles/firth-dns/tasks/zones/aquarionics_cf.yml
+++ b/roles/firth-dns/tasks/zones/aquarionics_cf.yml
@@ -18,11 +18,6 @@
       tags:
         - cloudflare
         - aquarionics
-  rescue:
-    - debug:
-        msg: "Cloudflare tasks failed"
-    - command:
-        cmd: "false"
 
     - name: Aquarionics Cloudflare Tasks
       tags:
@@ -444,7 +439,9 @@
             ttl: "300"
             value: '"did=did:plc:acfoshntvxza6ac45bkttyiw"'
   rescue:
-    - debug:
+    - name: "Failure warning"
+      ansible.builtin.debug:
         msg: "Cloudflare tasks failed"
-    - command:
+    - name: "Failure execution"
+      ansible.builtin.command:
         cmd: "false"
