--- a/roles/firth-dns/tasks/zones/istic.yml
+++ b/roles/firth-dns/tasks/zones/istic.yml
@@ -584,7 +584,9 @@
         - istic_sys
 
   rescue:
-    - debug:
+    - name: "Failure warning"
+      ansible.builtin.debug:
         msg: "AWS tasks failed"
-    - command:
+    - name: "Failure execution"
+      ansible.builtin.command:
         cmd: "false"
