Update ShellCheck configuration and adjust permissions in Dependabot workflow

--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -11,8 +11,8 @@ jobs:
       pull-requests: write
       statuses: write
       checks: write
-      actions: write
-      packages: write
+      actions: read
+      packages: read
     steps:
       - uses: actions/checkout@v4
       - name: Automerge DependaBot PRs
