--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["timonwong.shellcheck"]
+  "recommendations": [
+    "timonwong.shellcheck",
+    "github.vscode-github-actions"
+  ]
 }
