Refactor extensions.json to simplify recommendations format

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "timonwong.shellcheck",
-    "github.vscode-github-actions"
-  ]
+  "recommendations": ["timonwong.shellcheck", "github.vscode-github-actions"]
 }
