Add poetry dependency management to .envrc

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,11 @@
 layout python-venv python3
 
 export ANSIBLE_PYTHON_INTERPRETER=$VIRTUAL_ENV/bin/python
+
+if type poetry > /dev/null; then
+  poetry install -q
+else
+  # echo "Poetry is not installed. Please install it to manage dependencies."
+  exit 1
+fi
+
