Fix superlinter local config

--- a/.github/super-linter.local.env
+++ b/.github/super-linter.local.env
@@ -9,6 +9,7 @@ BASH_EXEC_IGNORE_LIBRARIES=true
 # CREATE_LOG_FILE 	false 	If set to true, it creates the log file. You can set the log filename using the LOG_FILE environment variable. This overrides any existing log files.
 # CSS_FILE_NAME 	.stylelintrc.json 	Filename for Stylelint configuration (ex: .stylelintrc.yml, .stylelintrc.yaml)
 # DEFAULT_BRANCH 	Default repository branch when running on GitHub Actions, master otherwise 	The name of the repository default branch. There's no need to configure this variable when running on GitHub Actions
+DEFAULT_BRANCH=main
 # DEFAULT_WORKSPACE 	/tmp/lint 	The location containing files to lint if you are running locally. Defaults to GITHUB_WORKSPACE when running in GitHub Actions. There's no need to configure this variable when running on GitHub Actions.
 # DISABLE_ERRORS 	false 	Flag to have the linter complete with exit code 0 even if errors were detected.
 # DOCKERFILE_HADOLINT_FILE_NAME 	.hadolint.yaml 	Filename for hadolint configuration (ex: .hadolintlintrc.yaml)
@@ -163,6 +164,7 @@ FIX_YAML_PRETTIER=true
 # REMOVE_ANSI_COLOR_CODES_FROM_OUTPUT 	false 	If set to true, Super-linter removes ANSI color codes from linters stdout and stderr files, and from the Super-linter log file.
 # RUBY_CONFIG_FILE 	.ruby-lint.yml 	Filename for rubocop configuration (ex: .ruby-lint.yml, .rubocop.yml)
 # RUN_LOCAL 	false 	Set this to true when running outside GitHub Actions or when you want to disable getting environment information from the GitHub Actions environment. For more information about running Super-linter outside GitHub Actions, see Run Super-Linter outside GitHub Actions.
+RUN_LOCAL=true
 # RUST_CLIPPY_COMMAND_OPTIONS 	not set 	Additional options and arguments to pass to the command when running Clippy.
 # SAVE_SUPER_LINTER_OUTPUT 	false 	If set to true, Super-linter will save its output in the workspace. For more information, see Super-linter outputs.
 SAVE_SUPER_LINTER_OUTPUT=true
