--- a/playbook.yml
+++ b/playbook.yml
@@ -46,6 +46,7 @@
       ansible.builtin.import_role:
         name: datadog.dd.agent
   vars:
+    datadog_api_key: "{{ datadog_api_key }}"
     datadog_site: "datadoghq.eu"
     datadog_apm_instrumentation_enabled: "host"
     datadog_apm_instrumentation_libraries:
