Remove ESM Advert task

--- a/roles/water-gkhs-common/tasks/main.yml
+++ b/roles/water-gkhs-common/tasks/main.yml
@@ -191,3 +191,8 @@
     - name: "Failure execution"
       ansible.builtin.command:
         cmd: "false"
+
+- name: remove ESM advert
+  ansible.builtin.file:
+    path: /etc/apt/apt.conf.d/20apt-esm-hook.conf
+    state: absent
