Add error handling for AWS tasks in Camlarp DNS configuration

--- a/roles/firth-dns/tasks/zones/camlarp.yml
+++ b/roles/firth-dns/tasks/zones/camlarp.yml
@@ -146,3 +146,11 @@
         type: A
         ttl: "300"
         value: "{{ loadbalancer_ip }}"
+
+  rescue:
+    - name: "Failure warning"
+      ansible.builtin.debug:
+        msg: "AWS tasks failed"
+    - name: "Failure execution"
+      ansible.builtin.command:
+        cmd: "false"
